--- a/WishList/Views/Item/Create.cshtml
+++ b/WishList/Views/Item/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@model WishList.Models.Item
 
 <h3>Add item to wishlist</h3>
-<form asp-action-"create">
-    <input asp-for="Desription" />
+<form asp-action="create">
+    <input asp-for="Description" />
     <span asp-validation-for="Description"></span>
     <button type="Submit">Add Item</button>
 </form>
