--- a/WishList/Views/Item/Create.cshtml
+++ b/WishList/Views/Item/Create.cshtml
@@ -4,5 +4,5 @@
 <form asp-action="create">
     <input asp-for="Description" />
     <span asp-validation-for="Description"></span>
-    <button type="Submit">Add Item</button>
+    <button type="submit">Add item</button>
 </form>
